@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy


class EliteAircraft{
    - shootNum:int
    - power:int
    - direction:int
    + EliteAircraft(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- EliteAircraft

class BossAircraft{
}
AbstractAircraft <|-- BossAircraft

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}


BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY) {
            super(locationX, locationY, speedX, speedY)
    + {abstract} shoot():List<BaseProp>
}

class BoombProp{
    + BoombProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + function():void
}

class FireProp{
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + function():void
}

class HpProp{
    + HpProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + function():void
}

BaseProp <|-- BoombProp
BaseProp <|-- FireProp
BaseProp <|-- HpProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

@enduml